@@ -241,6 +241,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\kjs\fpconst.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\kjs\function.cpp"
 				>
 			</File>
