@@ -46,8 +46,6 @@ namespace KJS {
 
 #else // !PLATFORM(DARWIN)
 
-#include "value.h"
-
 #if PLATFORM(BIG_ENDIAN)
     const unsigned char NaN_Bytes[] = { 0x7f, 0xf8, 0, 0, 0, 0, 0, 0 };
     const unsigned char Inf_Bytes[] = { 0x7f, 0xf0, 0, 0, 0, 0, 0, 0 };
@@ -58,8 +56,8 @@ namespace KJS {
     const unsigned char NaN_Bytes[] = { 0, 0, 0, 0, 0, 0, 0xf8, 0x7f };
     const unsigned char Inf_Bytes[] = { 0, 0, 0, 0, 0, 0, 0xf0, 0x7f };
 #endif
-    const double NaN = *(const double*) NaN_Bytes;
-    const double Inf = *(const double*) Inf_Bytes;
+    extern const double NaN = *(const double*) NaN_Bytes;
+    extern const double Inf = *(const double*) Inf_Bytes;
  
 #endif // !PLATFORM(DARWIN)
 
